// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Model /> should render properly 1`] = `
Array [
  <Breadcrumbs
    crumbs={
      Array [
        Object {
          "href": "/[projectId]/models",
          "title": "Custom Models",
        },
        Object {
          "href": false,
          "title": "Model Details",
        },
      ]
    }
  />,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Label updated.
      </div>
    </div>
  </div>,
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
}

.emotion-2 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #ffffff;
  background-color: #0074f5;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #005dc4;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-2"
        color="#0074f5"
        data-file-name="generating.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        "
        console_face_recognition
        " training in progress.
         
        <a
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/223fd17d-7028-1519-94a8-d2f0132bc0c8"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Check Status
        </a>
      </div>
    </div>
  </div>,
  "",
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  font-size: 17px;
  line-height: 23px;
}

<ul
    className="emotion-0"
  >
    <li>
      <strong>
        Model Name:
      </strong>
       
      console_face_recognition
    </li>
    <li>
      <strong>
        Model Type:
      </strong>
       
      ZVI_FACE_RECOGNITION
    </li>
    <li>
      <strong>
        Module Name:
      </strong>
       
      zvi-console_face_recognition-face-recognition
    </li>
  </ul>,
  .emotion-0 {
  padding-top: 8px;
  font-style: italic;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 span {
  padding-top: 4px;
}

.emotion-1 {
  color: #ebb52e;
}

<div
    className="emotion-0"
  >
    <span
      className="emotion-1"
    >
      1
       more
       
      label is
       required (min. =
       
      2
       unique)
    </span>
    <span
      className="emotion-1"
    >
      15
       more assets need to be labeled (min. =
       
      10
       of each label)
    </span>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-0 button,
.emotion-0 a {
  margin-right: 16px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited,
.emotion-1 .noop {
  background-color: #808080;
}

.emotion-1:hover,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited,
.emotion-3 .noop {
  background-color: #808080;
}

.emotion-3:hover,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <button
      aria-disabled={true}
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Train
    </button>
    <button
      aria-disabled={true}
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Train & Apply
    </button>
    <button
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View Labels
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5/assets"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Labeled Assets
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: -16px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited,
.emotion-1 .noop {
  background-color: #808080;
}

.emotion-1:hover,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  padding-right: 8px;
}

.emotion-4 {
  width: 16px;
}

<div
    className="emotion-0"
  >
    <a
      aria-label="Add Filter in Visualizer"
      className="emotion-1"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?query=W3sidHlwZSI6ImxhYmVsIiwiYXR0cmlidXRlIjoibGFiZWxzLnp2aS1jb25zb2xlX2ZhY2VfcmVjb2duaXRpb24tZmFjZS1yZWNvZ25pdGlvbiIsIm1vZGVsSWQiOiI2MjFiZjc3NS04OWQ5LTEyNDQtOTU5Ni1kNmRmNDNmMWVkZTUiLCJ2YWx1ZXMiOnt9fV0="
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        className="emotion-2"
      >
        <svg
          className="emotion-3"
          data-file-name="filter.svg"
          height={20}
        />
        Add Filter in Visualizer
      </div>
    </a>
    <div
      className="emotion-4"
    />
    <a
      aria-label="Add More Labels"
      className="emotion-1"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        className="emotion-2"
      >
        <svg
          className="emotion-3"
          data-file-name="pen.svg"
          height={20}
        />
        Add More Labels
      </div>
    </a>
  </div>,
  <ModelLabels
    requiredAssetsPerLabel={10}
  />,
  "",
]
`;

exports[`<Model /> should render properly in edit label mode 1`] = `
Array [
  <Breadcrumbs
    crumbs={
      Array [
        Object {
          "href": "/[projectId]/models",
          "title": "Custom Models",
        },
        Object {
          "href": false,
          "title": "Model Details",
        },
      ]
    }
  />,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Label deleted.
      </div>
    </div>
  </div>,
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
}

.emotion-2 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #ffffff;
  background-color: #0074f5;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #005dc4;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-2"
        color="#0074f5"
        data-file-name="generating.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        "
        console_face_recognition
        " training in progress.
         
        <a
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/223fd17d-7028-1519-94a8-d2f0132bc0c8"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Check Status
        </a>
      </div>
    </div>
  </div>,
  "",
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  font-size: 17px;
  line-height: 23px;
}

<ul
    className="emotion-0"
  >
    <li>
      <strong>
        Model Name:
      </strong>
       
      console_face_recognition
    </li>
    <li>
      <strong>
        Model Type:
      </strong>
       
      ZVI_FACE_RECOGNITION
    </li>
    <li>
      <strong>
        Module Name:
      </strong>
       
      zvi-console_face_recognition-face-recognition
    </li>
  </ul>,
  .emotion-0 {
  padding-top: 8px;
  font-style: italic;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 span {
  padding-top: 4px;
}

.emotion-1 {
  color: #ebb52e;
}

<div
    className="emotion-0"
  >
    <span
      className="emotion-1"
    >
      1
       more
       
      label is
       required (min. =
       
      2
       unique)
    </span>
    <span
      className="emotion-1"
    >
      15
       more assets need to be labeled (min. =
       
      10
       of each label)
    </span>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-0 button,
.emotion-0 a {
  margin-right: 16px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited,
.emotion-1 .noop {
  background-color: #808080;
}

.emotion-1:hover,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited,
.emotion-3 .noop {
  background-color: #808080;
}

.emotion-3:hover,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <button
      aria-disabled={true}
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Train
    </button>
    <button
      aria-disabled={true}
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Train & Apply
    </button>
    <button
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-7 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View Labels
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5/assets"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Labeled Assets
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-7"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Edit Label
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus,
.emotion-4 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover,
.emotion-4 .noop {
  border: 2px solid #ffffff;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-6 button,
.emotion-6 a {
  margin-right: 16px;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #808080;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited,
.emotion-8 .noop {
  background-color: #73b61c;
}

.emotion-8:hover,
.emotion-8 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-8[aria-disabled=true],
.emotion-8 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="newLabel"
      >
        Label
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoFocus={true}
          className="emotion-4"
          disabled={false}
          id="newLabel"
          name="newLabel"
          onChange={[Function]}
          type="text"
          value="cat"
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <a
        className="emotion-7"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Cancel
      </a>
      <button
        aria-disabled={true}
        className="emotion-8"
        onClick={[Function]}
        type="submit"
      >
        Save Label Changes
      </button>
    </div>
  </form>,
]
`;
